[package]
name = "konark"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
bevy = { version = "0.10.1", default-features = false,  features = [ "bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_pbr", "bevy_ui"]  } # "dynamic_linking" is required for hot-reloading, remove it on final build
bevy_mod_picking = "0.13.0"
bevy_panorbit_camera = "0.5.2"
bevy_transform_gizmo = "0.7.0"
bevy_infinite_grid =  "0.7.0"
bevy_mod_outline = "0.4"
#bevy_atmosphere = "0.6.0"
# bevy_prototype_lyon = "0.8.0"
# bezier-rs = "0.2.0"
#noise = "0.8"
#colorgrad = "0.7.0"


[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
