[package]
name = "konark"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11" } # "dynamic_linking" is required for hot-reloading, remove it on final build
bevy_mod_picking = "0.15"
bevy_panorbit_camera = "0.8"
bevy_transform_gizmo = "0.8"
bevy_atmosphere = "0.7.0"
bevy_prototype_lyon = "0.9"
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_mod_outline = "0.5"
bezier-rs = "0.2.0"
bevy_mesh_drawing = { git = "https://github.com/nilaysavant/bevy_mesh_drawing", tag = "v0.2.0" }

#noise = "0.8"
#colorgrad = "0.7.0"


[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
